Add LottieView support on macOS using EpoxyCore 0.10.0 (#2104)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
+        with:
+          xcode: '14.3' # Swift 5.8
       - name: Build Example
         run: bundle exec rake build:example:all
 
