--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build-package-macos-13:
+  build-package-no-visionOS:
     name: "Build Package"
     runs-on: macos-13
     strategy:
@@ -16,16 +16,31 @@ jobs:
         xcode:
         - '14.1' # Swift 5.7
         - '14.3' # Swift 5.8
-        - '15.0' # Swift 5.9
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
         with:
           xcode: ${{ matrix.xcode }}
       - name: Build Package
-        # Once there is a production Xcode version with the visionOS SDK,
-        # we will want to use that version without `SKIP_VISION_OS=true`
+        # Only Xcode 15.2 and later support visionOS, so exclude it on earlier versions.
         run: SKIP_VISION_OS=true bundle exec rake build:package:all
+
+  build-package:
+    name: "Build Package"
+    runs-on: macos-13
+    strategy:
+      fail-fast: false
+      matrix:
+        xcode:
+        - '15.2' # Swift 5.9
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/setup
+        with:
+          xcode: ${{ matrix.xcode }}
+      - name: Build Package
+        run: bundle exec rake build:package:all
+
 
   build-example:
     name: "Build Example App"
@@ -34,11 +49,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
         with:
-          xcode: '15.0' # Swift 5.9
+          xcode: '15.2' # Swift 5.9
       - name: Build Example
-        # Once there is a production Xcode version with the visionOS SDK,
-        # we will want to remove `SKIP_VISION_OS=true`
-        run: SKIP_VISION_OS=true bundle exec rake build:example:all
+        run: bundle exec rake build:example:all
 
   test-package:
     name: "Test Package"
@@ -47,7 +60,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
         with:
-          xcode: '15.0' # Swift 5.9
+          xcode: '15.2' # Swift 5.9
       - name: Test Package
         run: bundle exec rake test:package
       - name: Process test artifacts
@@ -72,7 +85,7 @@ jobs:
           EMERGE_API_TOKEN: ${{ secrets.EMERGE_API_TOKEN }}
           PR_NUMBER: ${{ github.event.number }}
 
-  build-xcframework-macos-13:
+  build-xcframework-minimum-supported-version:
     name: "Build XCFramework"
     runs-on: macos-13
     strategy:
@@ -83,6 +96,10 @@ jobs:
           # will be able to use these XCFrameworks and the lottie-spm package.
           # This should be the minimum Xcode version permitted by the App Store.
           # As of April 2023, this is Xcode 14.1: https://developer.apple.com/news/?id=jd9wcyov
+          #  - TODO: Once this minimum supported Xcode version is 15.0 or later,
+          #    we can use Xcode 15.2 here and remove the `build-xcframework-with-visionOS-support` job.
+          #    Testing in https://github.com/airbnb/lottie-spm/pull/12 shows that Xcode 15.0 can
+          #    use an XCFramework built by Xcode 15.2.
           - '14.1' # Swift 5.7.1
     steps:
       - uses: actions/checkout@v2
@@ -95,19 +112,36 @@ jobs:
         with:
           xcode: ${{ matrix.xcode }}
       - name: Build XCFramework
-        # Once there is a production Xcode version with the visionOS SDK, we will
-        # need to also build an XCFramework using that version but without `SKIP_VISION_OS=true`
         run: SKIP_VISION_OS=true bundle exec rake build:xcframework[Lottie-Xcode-${{ matrix.xcode }}]
       - name: Upload XCFramework
         uses: actions/upload-artifact@v2
         with:
           name: BuildProducts
-          # The xcframework is at the path `.build/archives/Lottie.xcframework.zip`.
-          # GitHub always zips the artifacts before uploading, so if we uploaded the .xframework.zip
-          # directly then it would actually upload a double-zip (a .zip containing our `Lottie.xcframework.zip`).
-          # This is confusing especially since macOS Archive Utility automatially unzips both layers at once.
-          # Instead, we upload the entire archives folder, resulting in an `XCFramework.zip` that unzips
-          # to an `archives` directory containing our `Lottie.xcframework.zip`.
+          path: .build/archives
+
+  build-xcframework-with-visionOS-support:
+    name: "Build XCFramework"
+    runs-on: macos-13
+    strategy:
+      matrix:
+        xcode:
+          - '15.2' # Swift 5.9, first Xcode version with visionOS support.
+    steps:
+      - uses: actions/checkout@v2
+      - uses: apple-actions/import-codesign-certs@v2
+        continue-on-error: true
+        with:
+          p12-file-base64: ${{ secrets.SIGNING_CERTIFICATE_BASE_64 }}
+          p12-password: ${{ secrets.SIGNING_CERTIFICATE_PASSWORD }}
+      - uses: ./.github/actions/setup
+        with:
+          xcode: ${{ matrix.xcode }}
+      - name: Build XCFramework
+        run: bundle exec rake build:xcframework[Lottie-Xcode-${{ matrix.xcode }}]
+      - name: Upload XCFramework
+        uses: actions/upload-artifact@v2
+        with:
+          name: BuildProducts
           path: .build/archives
 
   cocoapod:
@@ -127,7 +161,7 @@ jobs:
     strategy:
       matrix:
         xcode:
-        - '15.0' # Swift 5.9
+        - '15.2' # Swift 5.9
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
@@ -136,22 +170,6 @@ jobs:
           xcode: ${{ matrix.xcode }}
       - name: Test Swift Package Manager support
         run: bundle exec rake test:spm
-
-  spm-xcode-14:
-    name: "Test Swift Package Manager"
-    runs-on: macos-13
-    strategy:
-      matrix:
-        xcode:
-        - '15.0' # Swift 5.9
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/actions/setup
-        with:
-          install-mint: true
-          xcode: ${{ matrix.xcode }}
-      - name: Test Swift Package Manager support
-        run: SKIP_VISION_OS=true bundle exec rake test:spm
 
   carthage:
     name: "Test Carthage support"
@@ -162,7 +180,7 @@ jobs:
         with:
           install-mint: true
           install-carthage: true
-          xcode: '15.0' # Swift 5.9
+          xcode: '15.2' # Swift 5.9
       - name: Test Carthage support
         run: bundle exec rake test:carthage
 
